; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_malloc_lock.c___memlock_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_malloc_lock.c___memlock_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@initialized = common dso_local global i32 0, align 4
@LWP_MUTEX_FIFO = common dso_local global i32 0, align 4
@LWP_MUTEX_NEST_ACQUIRE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@mem_lock = common dso_local global i32 0, align 4
@LWP_MUTEX_UNLOCKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__memlock_init() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = call i32 (...) @__lwp_thread_dispatchdisable()
  %3 = load i32, i32* @initialized, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %15, label %5

5:                                                ; preds = %0
  store i32 1, i32* @initialized, align 4
  %6 = load i32, i32* @LWP_MUTEX_FIFO, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @LWP_MUTEX_NEST_ACQUIRE, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* @TRUE, align 4
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 1, i32* %12, align 4
  %13 = load i32, i32* @LWP_MUTEX_UNLOCKED, align 4
  %14 = call i32 @__lwp_mutex_initialize(i32* @mem_lock, %struct.TYPE_3__* %1, i32 %13)
  br label %15

15:                                               ; preds = %5, %0
  %16 = call i32 (...) @__lwp_thread_dispatchunnest()
  ret void
}

declare dso_local i32 @__lwp_thread_dispatchdisable(...) #1

declare dso_local i32 @__lwp_mutex_initialize(i32*, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @__lwp_thread_dispatchunnest(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
